--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="candel.jpg" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="https://avatars.githubusercontent.com/u/75294818?v=4"
+      type="image/x-icon"
+    />
     <title>Leaderboard</title>
   </head>
   <body>
@@ -18,7 +22,11 @@
           <a href="#">Home</a>
           <a href="#">About</a>
           <a href="#">Works</a>
-          <img class="round_img" src="candel.jpg" alt="face" />
+          <img
+            class="round_img"
+            src="https://avatars.githubusercontent.com/u/75294818?v=4"
+            alt="face"
+          />
         </div>
       </nav>
     </header>
@@ -31,27 +39,51 @@
         <h2 class="section_title">Top Player</h2>
         <div class="players">
           <div class="player">
-            <img class="round_img" src="candel.jpg" alt="" />
+            <img
+              class="round_img"
+              src="https://avatars.githubusercontent.com/u/75294818?v=4"
+              alt=""
+            />
             <h3>Player Name</h3>
           </div>
           <div class="player">
-            <img class="round_img" src="candel.jpg" alt="" />
+            <img
+              class="round_img"
+              src="https://avatars.githubusercontent.com/u/75294818?v=4"
+              alt=""
+            />
             <h3>Player Name</h3>
           </div>
           <div class="player">
-            <img class="round_img" src="candel.jpg" alt="" />
+            <img
+              class="round_img"
+              src="https://avatars.githubusercontent.com/u/75294818?v=4"
+              alt=""
+            />
             <h3>Player Name</h3>
           </div>
           <div class="player">
-            <img class="round_img" src="candel.jpg" alt="" />
+            <img
+              class="round_img"
+              src="https://avatars.githubusercontent.com/u/75294818?v=4"
+              alt=""
+            />
             <h3>Player Name</h3>
           </div>
           <div class="player">
-            <img class="round_img" src="candel.jpg" alt="" />
+            <img
+              class="round_img"
+              src="https://avatars.githubusercontent.com/u/75294818?v=4"
+              alt=""
+            />
             <h3>Player Name</h3>
           </div>
           <div class="player">
-            <img class="round_img" src="candel.jpg" alt="" />
+            <img
+              class="round_img"
+              src="https://avatars.githubusercontent.com/u/75294818?v=4"
+              alt=""
+            />
             <h3>Player Name</h3>
           </div>
         </div>
@@ -65,7 +97,11 @@
         <div class="blogs">
           <div class="blog">
             <div>
-              <img class="rect_img" src="candel.jpg" alt="" />
+              <img
+                class="rect_img"
+                src="https://avatars.githubusercontent.com/u/75294818?v=4"
+                alt=""
+              />
             </div>
             <div>
               <h3>Blog title goes here...</h3>
@@ -74,7 +110,11 @@
           </div>
           <div class="blog">
             <div>
-              <img class="rect_img" src="candel.jpg" alt="" />
+              <img
+                class="rect_img"
+                src="https://avatars.githubusercontent.com/u/75294818?v=4"
+                alt=""
+              />
             </div>
             <div>
               <h3>Blog title goes here...</h3>
@@ -83,7 +123,11 @@
           </div>
           <div class="blog">
             <div>
-              <img class="rect_img" src="candel.jpg" alt="" />
+              <img
+                class="rect_img"
+                src="https://avatars.githubusercontent.com/u/75294818?v=4"
+                alt=""
+              />
             </div>
             <div>
               <h3>Blog title goes here...</h3>
@@ -92,7 +136,11 @@
           </div>
           <div class="blog">
             <div>
-              <img class="rect_img" src="candel.jpg" alt="" />
+              <img
+                class="rect_img"
+                src="https://avatars.githubusercontent.com/u/75294818?v=4"
+                alt=""
+              />
             </div>
             <div>
               <h3>Blog title goes here...</h3>
@@ -109,7 +157,11 @@
       <h1 class="section_title">Latest Courses</h1>
       <div class="latest_courses">
         <div class="course">
-          <img class="rect_img" src="candel.jpg" alt="" />
+          <img
+            class="rect_img"
+            src="https://avatars.githubusercontent.com/u/75294818?v=4"
+            alt=""
+          />
           <h3>Course title goes here</h3>
           <a href="#">Course Author</a>
           <div class="course_info">
@@ -119,7 +171,11 @@
           </div>
         </div>
         <div class="course">
-          <img class="rect_img" src="candel.jpg" alt="" />
+          <img
+            class="rect_img"
+            src="https://avatars.githubusercontent.com/u/75294818?v=4"
+            alt=""
+          />
           <h3>Course title goes here</h3>
           <a href="#">Course Author</a>
           <div class="course_info">
@@ -129,7 +185,11 @@
           </div>
         </div>
         <div class="course">
-          <img class="rect_img" src="candel.jpg" alt="" />
+          <img
+            class="rect_img"
+            src="https://avatars.githubusercontent.com/u/75294818?v=4"
+            alt=""
+          />
           <h3>Course title goes here</h3>
           <a href="#">Course Author</a>
           <div class="course_info">
