Dropdown icon added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <div class="logo">
           <h1>☯ nav</h1>
         </div>
+
+        <div class="dropdown">
+          <h1>☰</h1>
+        </div>
+
         <div class="menu">
           <a href="#">Home</a>
           <a href="#">About</a>
