--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <div class="logo">
           <h1>☯ nav</h1>
         </div>
-
-        <div class="dropdown">
-          <h1>☰</h1>
-        </div>
+        <!-- -------------
+          Dropdown
+          ------------------ -->
+        <input type="checkbox" id="click" />
+        <label for="click" id="drop"> <h1>☰</h1></label>
+        <label for="click" id="cross"> <h1>✖</h1></label>
 
         <div class="menu">
           <a href="#">Home</a>
