--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 alt=""
               />
             </div>
-            <div>
+            <div class="blog_info">
               <h3>Blog title goes here...</h3>
               <p>By <a href="#">Author Name</a></p>
             </div>
@@ -126,7 +126,7 @@
                 alt=""
               />
             </div>
-            <div>
+            <div class="blog_info">
               <h3>Blog title goes here...</h3>
               <p>By <a href="#">Author Name</a></p>
             </div>
@@ -139,7 +139,7 @@
                 alt=""
               />
             </div>
-            <div>
+            <div class="blog_info">
               <h3>Blog title goes here...</h3>
               <p>By <a href="#">Author Name</a></p>
             </div>
@@ -152,7 +152,7 @@
                 alt=""
               />
             </div>
-            <div>
+            <div class="blog_info">
               <h3>Blog title goes here...</h3>
               <p>By <a href="#">Author Name</a></p>
             </div>
